# LiteraPlay_cmd

./: .gitignore  AGENTS.md  LiteraPlay.spec  README.md  ai_service.py  check_models.py  config.py  data.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  response_parser.py  run.py  test_ai_service.py  test_pdf_integration.py  test_response_parser.py  ui_components.py
.Jules/: palette.md
.github/: copilot-instructions.md
books/: Dimityr Dimov -  - . Tjutjun - 5799.txt  Ivan Vazov -  - . Nemili-nedragi - 3765.txt  Ivan Vazov - TBc - 2. Pod igoto - 3753.txt  dimitar_dimov_tyutyun.txt  ivan_vazov_nemili_nedragi.txt
books/nemili/: meta.yaml  text.md
books/pod_igoto/: meta.yaml  text.md
books/tyutyun/: meta.yaml  text.md
src/literaplay/: ai_service.py  book_loader.py  check_models.py  config.py  data.py  dependency_compat.py  main.py  pdf_loader.py  response_parser.py  story_state.py
src/literaplay/ui/: index.html  script.js  style.css
tests/: test_ai_service.py  test_book_loader.py  test_check_models.py  test_config.py  test_data.py  test_dependency_compat.py  test_main.py  test_main_helpers.py  test_pdf_integration.py  test_pdf_loader.py  test_response_parser.py  test_story_state.py
