[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "literaplay"
version = "1.0.0"
description = "LiteraPlay – Interactive Literature Chat Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Essentials>=6.6.0",
    "PySide6-Addons>=6.6.0",
    "shiboken6>=6.6.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.9.0",
]

[project.scripts]
literaplay = "literaplay.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
literaplay = ["ui/*.html", "ui/*.css", "ui/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E402"]  # Allow imports after sys.path manipulation in main.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
